# HouseholdEnergyPredictor

./: .gitignore  Convert-Model-To-TFLite.ipynb  Data-LPG-Prep.ipynb  Data-London-prep.ipynb  Diff-Func-Tests.py  ExpSmoothing.ipynb  LinearRegresion.ipynb  Models-pipelines-training.ipynb  MyModels.py  RNN-2.ipynb  RadiacjaAPI.txt  SolcastTest.py  Support Vector Machines.ipynb  TO_DO.txt
Diagrams/: OptimAlgo.drawio
ESP32/Esp32TFL/main/: ADCHelper.cc  ADCHelper.h  CMakeLists.txt  ExponentialSmoothing.cc  ExponentialSmoothing.h  LoadPrediction.cc  LoadPrediction.h  NTPTime.cc  NTPTime.h  NVStorageHelper.cc  WebSocket.cc  WebSocket.h  WiFi.cc  WiFi.h  constants.cc  constants.h  http_request.cc  main.cc  main_functions.cc  model.cc  model.h  solcast_api.cc
ESP32/Esp32TFL/main/include/: ADCHelper.h  ExponentialSmoothing.h  LoadPrediction.h  NTPTime.h  NVStorageHelper.h  WebSocket.h  WiFi.h  http_request.h  model.h  solcast_api.h
Load Prediction/: Convert-Model-To-TFLite.ipynb  Data-LPG-Prep.ipynb  Data-London-prep.ipynb  Data-tests-analisy.ipynb  Diff-Func-Tests.py  Ensemble Learning.ipynb  ExpSmoothing.ipynb  ExponentialSmoothingImplementatin.ipynb  LSTMConversionToTFLiteWithQuantization.ipynb  Models-pipelines-training.ipynb  MyModels.py  MyTransformers.py  NARX.ipynb  Optimalization.ipynb  PlotsFromTensorBoard.ipynb  RNN-2.ipynb  RNN-Pipelines.ipynb  RNN-test1.ipynb  Support Vector Machines.ipynb  TensorflowLitePythonTest.ipynb  Untitled-1.ipynb  _runTensorBoard.bat  cuML-test.ipynb  energy-consumption-forecast.ipynb  matlabTestNarax.m  results-3-2-2.txt  test.py
(+359 files in other folders)
